--- a/ui.html
+++ b/ui.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/OpQwenYJLj/Senior-UIUX-Designer'>Senior UI/UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/OpQwenYJLj/Senior-UIUX-Designer'>Senior UI/UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
@@ -142,7 +142,7 @@
 <p><span class="badge badge-light">France  France France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316282-charge-de-clientele-h-f'>OUI CARE GROUP Charg? de Client?le H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OUICAREGROUP/743999698316282-charge-de-clientele-h-f'>OUI CARE GROUP Charg? de Client?le H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -233,7 +233,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/cardinal-financial-looking-for-senior-ui-ux-designer/'>Cardinal Financial looking for Senior UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/cardinal-financial-looking-for-senior-ui-ux-designer/'>Cardinal Financial looking for Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -295,7 +295,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Colombo, Sri Lanka  Australia Colombo, Sri Lanka</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
+<h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -321,7 +321,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
